Added flex and java code

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,6 +38,12 @@
   <servlet-mapping>
   	<servlet-name>default</servlet-name>
   	<url-pattern>*.html</url-pattern>
+  	<url-pattern>*.js</url-pattern>
+  	<url-pattern>*.swf</url-pattern>
+</servlet-mapping>
+<servlet-mapping>
+<servlet-name>spring</servlet-name>
+<url-pattern>/messagebroker/*</url-pattern>
 </servlet-mapping>
   <servlet-mapping>
     <servlet-name>spring</servlet-name>
